--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.38.0",
+    "@types/node": "^20.6.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
